# UdonDrop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  my_task.yml  question.yml  task.yml
.github/TEMPLATE/: .gitmessage
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CustomNode.tsx  DataCatalogPanel.tsx  EdgePropertiesPanel.tsx  ExecutionPanel.tsx  GroupManagerPanel.tsx  Icons.tsx  LayoutSelector.tsx  MenuBar.tsx  MetricsComparisonPanel.tsx  PipelineSlicingPanel.tsx  PipelineVisualization.tsx  PluginManagerPanel.tsx  PropertiesPanel.tsx  RunnerManagementPanel.tsx  SQLGeneratorPanel.tsx  Sidebar.tsx  TitleBar.tsx  UIIcons.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: usePipeline.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  ja.json
src/pages/: DataFlowEditor.tsx  SQLGenerator.tsx
src/services/: cliCommands.ts  configurationManager.ts  dataCatalog.ts  dataValidation.ts  experimentTracking.ts  groupManager.ts  hooksSystem.ts  pipelineExecution.ts  pipelineRegistry.ts  pluginSystem.ts  runnerSystem.ts  sqlParser.ts
src/styles/: reactFlowDarkMode.css  scrollbar.css  theme.ts
src/types/: index.ts
src/utils/: excelExport.ts  imageExport.ts  layoutAlgorithms.ts  platform.ts  theme.ts
